--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "jquery": "^3.6.0",
     "ngx-toastr": "^14.2.1",
     "rxjs": "~7.4.0",
+    "toastr": "^2.1.4",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
